# usbstereo

./: CMakeLists.txt  README.md  calibdialog.cpp  calibdialog.h  canvas.cpp  canvas.h  capturethread.cpp  capturethread.h  global.h  irstereo.pro  jpegdecode.cpp  jpegdecode.h  main.cpp  maindialog.cpp  maindialog.h  utils.cpp  v4l2capture.cpp  v4l2capture.h
